<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:text="@string/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/buttonRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/read"
        />
    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/apply"
        />
    <TextView
        android:text="@string/text01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/show_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/segment"
        />

    <TextView
        android:id="@+id/text_ini"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>
</LinearLayout>